plugins {
	id 'org.springframework.boot' version '2.7.4'
	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
	id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'
targetCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// 메이븐 애플 로그인 플젝에서 가져온 것
	implementation 'org.apache.httpcomponents:httpclient'
	implementation 'com.nimbusds:nimbus-jose-jwt:3.10'

	implementation "io.jsonwebtoken:jjwt:0.9.1"
	implementation "org.bouncycastle:bcpkix-jdk15on:1.50"
	implementation "org.apache.httpcomponents:httpclient:4.5.13"
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile){
	options.compilerArgs.addAll([
			"--add-exports=java.base/sun.security.provider=ALL-UNNAMED",
			"--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED",
			"--add-exports=java.base/sun.security.util=ALL-UNNAMED",
			"--add-exports=java.base/sun.security.x509=ALL-UNNAMED"
	])
}

////Note: these should be reflected in the module-info additions passed to the JDK
//compileJava.options.compilerArgs.addAll([
//		"--add-exports=java.base/sun.security.timestamp=jdk.packager",
//		"--add-exports=java.base/sun.security.x509=jdk.packager",
//		-            "--add-exports=jdk.jdeps/com.sun.tools.jdeps=jdk.packager",
//		+
//				+            // Note: retain jdk.jlink qualified export for cases where the JDK does
//						+            // not contain the jdk.packager module.
//								"--add-exports=jdk.jlink/jdk.tools.jlink.internal.packager=jdk.packager",
//
//		// Note: not in extras...
//		"--add-exports=java.base/sun.security.pkcs=jdk.packager",
//		"--add-exports=java.logging/java.util.logging=jdk.packager",



//compileJava.options.compilerArgs.addAll([
//		"--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED",
//		"--add-exports=java.base/sun.security.util=ALL-UNNAMED",
//		"--add-exports=java.base/sun.security.x509=ALL-UNNAMED"
//])

//compileJava {
//	options.compilerArgs.addAll(['--release', '17'])
//}